--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -1,75 +1,101 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>CSS Mem Slider</title>
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <div class="header-container">
-          <h1>Welcome to HTML and CSS only Mem Slider!</h1>
-        </div>
-      </header>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css?family=Poppins:100,300,regular,500,600,700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="style.css" />
+		<title>CSS Mem Slider</title>
+	</head>
+	<body>
+		<div class="wrapper">
+			<header class="header">
+				<div class="header-container">
+					<h1>Welcome to HTML&CSS only Mem Slider!</h1>
+				</div>
+				<div class="underline underline--header"></div>
+			</header>
 
-      <main>
-        <div class="container">
-          <input type="radio" name="point" id="slide1" checked>
-          <input type="radio" name="point" id="slide2">
-          <input type="radio" name="point" id="slide3">
-          <input type="radio" name="point" id="slide4">
-          <input type="radio" name="point" id="slide5">
-        	<div class="slider">
-            <div class="slider-track">
-              <div class="slides slide1"></div>
-          		<div class="slides slide2"></div>
-          		<div class="slides slide3"></div>
-          		<div class="slides slide4"></div>
-          		<div class="slides slide5"></div>
-            </div>
-        	</div>
-          <div class="slider-panel">
-            <div class="pic-captions">
-              <div class="captions-track">
-                <div class="caption" id="caption1">
-                  <p>There should be a text to the meme that I have not yet been able to come up with N1</p>
-                </div>
-                <div class="caption" id="caption2">
-                  <p>There should be a text to the meme that I have not yet been able to come up with N2</p>
-                </div>
-                <div class="caption" id="caption3">
-                  <p>There should be a text to the meme that I have not yet been able to come up with N3</p>
-                </div>
-                <div class="caption" id="caption4">
-                  <p>There should be a text to the meme that I have not yet been able to come up with N4</p>
-                </div>
-                <div class="caption" id="caption5">
-                  <p>There should be a text to the meme that I have not yet been able to come up with N5</p>
-                </div>
-              </div>
-            </div>
-          	<div class="controls">
-          		<label for="slide1"></label>
-          		<label for="slide2"></label>
-          		<label for="slide3"></label>
-          		<label for="slide4"></label>
-          		<label for="slide5"></label>
-          	</div>
-          </div>
-        </div>
-      </main>
+			<main>
+				<div class="container">
+					<input type="radio" name="point" id="slide1" checked />
+					<input type="radio" name="point" id="slide2" />
+					<input type="radio" name="point" id="slide3" />
+					<input type="radio" name="point" id="slide4" />
+					<input type="radio" name="point" id="slide5" />
+					<div class="slider">
+						<div class="slider-track">
+							<div class="slides slide1"></div>
+							<div class="slides slide2"></div>
+							<div class="slides slide3"></div>
+							<div class="slides slide4"></div>
+							<div class="slides slide5"></div>
+						</div>
+					</div>
+					<div class="slider-panel">
+						<div class="pic-captions">
+							<div class="captions-track">
+								<div class="caption" id="caption1">
+									<p>
+										There should be a text to the meme that
+										I have not yet been able to come up with
+										N1
+									</p>
+								</div>
+								<div class="caption" id="caption2">
+									<p>
+										There should be a text to the meme that
+										I have not yet been able to come up with
+										N2
+									</p>
+								</div>
+								<div class="caption" id="caption3">
+									<p>
+										There should be a text to the meme that
+										I have not yet been able to come up with
+										N3
+									</p>
+								</div>
+								<div class="caption" id="caption4">
+									<p>
+										There should be a text to the meme that
+										I have not yet been able to come up with
+										N4
+									</p>
+								</div>
+								<div class="caption" id="caption5">
+									<p>
+										There should be a text to the meme that
+										I have not yet been able to come up with
+										N5
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="controls">
+							<label for="slide1"></label>
+							<label for="slide2"></label>
+							<label for="slide3"></label>
+							<label for="slide4"></label>
+							<label for="slide5"></label>
+						</div>
+					</div>
+				</div>
+			</main>
 
-      <footer>
-        <div class="footer-container">
-          <a href="https://github.com/JP4FF">Made by JP4FF &copy; 2021</a>
-        </div>
-      </footer>
-    </div>
-
-  </body>
+			<footer class="footer">
+				<div class="underline underline--footer"></div>
+				<div class="footer-container">
+					<a href="https://github.com/JP4FF"
+						>Made by JP4FF &copy; 2022</a
+					>
+				</div>
+			</footer>
+		</div>
+	</body>
 </html>
